--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         <div class="col-lg-5">
                             <h1>New sets for any style!</h1>
                             <p>Choose from our new Lashaè collection</p>
-                            <a href="#" class="primary-btn">Shop Now</a>
+                            <a href="./made-to-order.html" class="primary-btn">Shop Now</a>
                         </div>
                     </div>
                     <div class="off-card">
@@ -155,7 +155,7 @@
                         <div class="col-lg-5">
                             <h1>Just for you</h1>
                             <p>Our custom made nails are tailored to your needs and personality</p>
-                            <a href="./custom-orders.html" class="primary-btn">Shop Now</a>
+                            <a href="./custom-sets.html" class="primary-btn">Shop Now</a>
                         </div>
                     </div>
                     <div class="off-card">
