--- a/Legal/terms-of-sale-policy.html
+++ b/Legal/terms-of-sale-policy.html
@@ -66,7 +66,7 @@
                 <div class="row">
                     <div class="col-lg-2 col-md-2">
                         <div class="logo">
-                            <a href="../index.html">
+                            <a href="https://lashaeglamour.co.uk">
                                 <img src="../img/logo.png" alt="">
                             </a>
                         </div>
@@ -389,7 +389,7 @@
                 <div class="col-lg-3">
                     <div class="footer-left">
                         <div class="footer-logo">
-                            <a href="../index.html"><img src="../img/footer-logo.png" alt="Lashae Glamour Logo"></a>
+                            <a href="https://lashaeglamour.co.uk"><img src="../img/footer-logo.png" alt="Lashae Glamour Logo"></a>
                         </div>
                         <div class="footer-social">
                             <a href="https://www.instagram.com/lashaeglamour" target="_blank" rel="noopener noreferrer"><i class="ti-instagram"></i></a>
