--- a/Products/golden-raffle.html
+++ b/Products/golden-raffle.html
@@ -66,7 +66,7 @@
                 <div class="row">
                     <div class="col-lg-2 col-md-2">
                         <div class="logo">
-                            <a href="../index.html">
+                            <a href="https://lashaeglamour.co.uk">
                                 <img src="../img/logo.png" alt="">
                             </a>
                         </div>
@@ -133,7 +133,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumb-text product-more">
-                        <a href="../index.html"><i class="fa fa-home"></i> Home</a>
+                        <a href="https://lashaeglamour.co.uk"><i class="fa fa-home"></i> Home</a>
                         <a href="../made-to-order.html">Made to Order</a>
                         <span>Golden Raffle</span>
                     </div>
@@ -202,7 +202,7 @@
             <div class="col-lg-3">
                 <div class="footer-left">
                     <div class="footer-logo">
-                        <a href="../index.html"><img src="../img/footer-logo.png" alt=""></a>
+                        <a href="https://lashaeglamour.co.uk"><img src="../img/footer-logo.png" alt=""></a>
                     </div>
                     <div class="footer-social">
                         <a href="https://www.instagram.com/lashaeglamour" target="_blank" rel="noopener noreferrer"><i class="ti-instagram"></i></a>
