--- a/ready-to-ship.html
+++ b/ready-to-ship.html
@@ -68,7 +68,7 @@
                 <div class="row">
                     <div class="col-lg-2 col-md-2">
                         <div class="logo">
-                            <a href="./index.html">
+                            <a href="https://lashaeglamour.co.uk">
                                 <img src="img/logo.png" alt="">
                             </a>
                         </div>
@@ -135,7 +135,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumb-text">
-                        <a href="index.html"><i class="fa fa-home"></i> Home</a>
+                        <a href="https://lashaeglamour.co.uk"><i class="fa fa-home"></i> Home</a>
                         <span>Ready to Ship</span>
                     </div>
                 </div>
@@ -254,7 +254,7 @@
                 <div class="col-lg-3">
                     <div class="footer-left">
                         <div class="footer-logo">
-                            <a href="./index.html"><img src="img/footer-logo.png" alt="Lashae Glamour Logo"></a>
+                            <a href="https://lashaeglamour.co.uk"><img src="img/footer-logo.png" alt="Lashae Glamour Logo"></a>
                         </div>
                         <div class="footer-social">
                             <a href="https://www.instagram.com/lashaeglamour" target="_blank" rel="noopener noreferrer"><i class="ti-instagram"></i></a>
