--- a/custom-sets.html
+++ b/custom-sets.html
@@ -167,6 +167,15 @@
                             </div>
                             <div class="col-lg-4 col-sm-6">
                                 <div class="product-item">
+                                    <a href="./Products/custom-nail-orders.html">
+                                    <div class="pi-pic">
+                                        <div class="ecsp ecsp-SingleProduct-v2 ecsp-SingleProduct-v2-centered ecsp-Product ec-Product-471721108" itemscope itemtype="http://schema.org/Product" data-single-product-id="471721108"><div itemprop="image"></div><div class="ecsp-title" itemprop="name" content="Create your own nails"></div><div itemtype="http://schema.org/Offer" itemscope itemprop="offers"><div class="ecsp-productBrowser-price ecsp-price" itemprop="price" content="49.99"><div itemprop="priceCurrency" content="GBP"></div></div></div><div customprop="vatinprice"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
+                                    </div>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-sm-6">
+                                <div class="product-item">
                                     <a href="./Products/matriarch.html">
                                     <div class="pi-pic">
                                         <div class="ecsp ecsp-SingleProduct-v2 ecsp-SingleProduct-v2-centered ecsp-Product ec-Product-430458057" itemscope itemtype="http://schema.org/Product" data-single-product-id="430458057"><div itemprop="image"></div><div class="ecsp-title" itemprop="name" content="Matriarch"></div><div itemtype="http://schema.org/Offer" itemscope itemprop="offers"><div class="ecsp-productBrowser-price ecsp-price" itemprop="price" content="29.99"><div itemprop="priceCurrency" content="GBP"></div></div></div><div customprop="vatinprice"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
@@ -176,9 +185,9 @@
                             </div>
                             <div class="col-lg-4 col-sm-6">
                                 <div class="product-item">
-                                    <a href="./Products/aqua-medley.html">
+                                    <a href="./Products/purple-chaos.html">
                                     <div class="pi-pic">
-                                        <div class="ecsp ecsp-SingleProduct-v2 ecsp-SingleProduct-v2-centered ecsp-Product ec-Product-354545422" itemscope itemtype="http://schema.org/Product" data-single-product-id="354545422"><div itemprop="image"></div><div class="ecsp-title" itemprop="name" content="Aqua Medley"></div><div itemtype="http://schema.org/Offer" itemscope itemprop="offers"><div class="ecsp-productBrowser-price ecsp-price" itemprop="price" content="35.99"><div itemprop="priceCurrency" content="GBP"></div></div></div><div customprop="vatinprice"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
+                                        <div class="ecsp ecsp-SingleProduct-v2 ecsp-SingleProduct-v2-centered ecsp-Product ec-Product-430432869" itemscope itemtype="http://schema.org/Product" data-single-product-id="430432869"><div itemprop="image"></div><div class="ecsp-title" itemprop="name" content="Purple Chaos"></div><div itemtype="http://schema.org/Offer" itemscope itemprop="offers"><div class="ecsp-productBrowser-price ecsp-price" itemprop="price" content="38.99"><div itemprop="priceCurrency" content="GBP"></div></div></div><div customprop="vatinprice"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
                                     </div>
                                     </a>
                                 </div>
@@ -203,9 +212,9 @@
                             </div>
                             <div class="col-lg-4 col-sm-6">
                                 <div class="product-item">
-                                    <a href="./Products/purple-chaos.html">
+                                    <a href="./Products/aqua-medley.html">
                                     <div class="pi-pic">
-                                        <div class="ecsp ecsp-SingleProduct-v2 ecsp-SingleProduct-v2-centered ecsp-Product ec-Product-430432869" itemscope itemtype="http://schema.org/Product" data-single-product-id="430432869"><div itemprop="image"></div><div class="ecsp-title" itemprop="name" content="Purple Chaos"></div><div itemtype="http://schema.org/Offer" itemscope itemprop="offers"><div class="ecsp-productBrowser-price ecsp-price" itemprop="price" content="38.99"><div itemprop="priceCurrency" content="GBP"></div></div></div><div customprop="vatinprice"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
+                                        <div class="ecsp ecsp-SingleProduct-v2 ecsp-SingleProduct-v2-centered ecsp-Product ec-Product-354545422" itemscope itemtype="http://schema.org/Product" data-single-product-id="354545422"><div itemprop="image"></div><div class="ecsp-title" itemprop="name" content="Aqua Medley"></div><div itemtype="http://schema.org/Offer" itemscope itemprop="offers"><div class="ecsp-productBrowser-price ecsp-price" itemprop="price" content="35.99"><div itemprop="priceCurrency" content="GBP"></div></div></div><div customprop="vatinprice"></div></div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=singleproduct_v2" charset="utf-8"></script><script type="text/javascript">xProduct()</script>
                                     </div>
                                     </a>
                                 </div>
