--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
                         <i class="ti-menu"></i>
                         <span>Categories</span>
                         <ul class="depart-hover">
-                            <li><a href="./shop.html">Lashaè Essentials</a></li>
-                            <li><a href="./shop.html">LG Luxe</a></li>
-                            <li><a href="./shop.html">Bridal Nails</a></li>
+                            <li><a href="../index.html">Lashaè Essentials</a></li>
+                            <li><a href="../index.html">LG Luxe</a></li>
+                            <li><a href="../bridal-nails.html">Bridal Nails</a></li>
                         </ul>
                     </div>
                 </div>
@@ -183,7 +183,7 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="single-banner">
-                        <a href="./custom-orders.html">
+                        <a href="./custom-sets.html">
                         <img src="img/5531673.jpg" alt="">
                         <div class="inner-text">
                             <h4>Custom Orders</h4>
