--- a/Products/custom-nail-orders.html
+++ b/Products/custom-nail-orders.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Lashae Glamour, nails, luxury">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Purple Chaos | Lashaè Glamour</title>
+    <title>Custom Nail Orders | Lashaè Glamour</title>
 
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
@@ -104,8 +104,8 @@
                         <i class="ti-menu"></i>
                         <span>Categories</span>
                         <ul class="depart-hover">
-                            <li><a href="../index.html">Lashaè Essentials</a></li>
-                            <li><a href="../index.html">LG Luxe</a></li>
+                            <li><a href="./shop.html">Lashaè Essentials</a></li>
+                            <li><a href="./shop.html">LG Luxe</a></li>
                             <li><a href="../bridal-nails.html">Bridal Nails</a></li>
                         </ul>
                     </div>
@@ -135,7 +135,7 @@
                     <div class="breadcrumb-text product-more">
                         <a href="https://lashaeglamour.co.uk"><i class="fa fa-home"></i> Home</a>
                         <a href="../custom-sets.html">Custom Sets</a>
-                        <span>Purple Chaos</span>
+                        <span>Custom Nail Orders</span>
                     </div>
                 </div>
             </div>
@@ -149,9 +149,9 @@
             <div class="row">
                 <div class="col-lg-10">
                     <!-- Ecwid Store -->
-                    
+
                     <div id="my-store-60464127"></div>
-                    <div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=code&data_date=2022-05-22" charset="utf-8"></script>
+                    <div><script data-cfasync="false" type="text/javascript" src="https://app.ecwid.com/script.js?60464127&data_platform=code&data_date=2022-09-20" charset="utf-8"></script>
                     <script type="text/javascript"> 
                     window.ec=window.ec||{}; 
                     window.ec.storefront=window.ec.storefront||{}; 
@@ -170,6 +170,7 @@
                     window.ec.storefront.product_details_show_wholesale_prices=false;
                     window.ec.storefront.product_details_show_product_options=true;
                     window.ec.storefront.product_details_show_product_description=true;
+                    window.ec.storefront.product_details_show_delivery_time=undefined;
                     window.ec.storefront.product_details_show_share_buttons=true;
                     window.ec.storefront.product_details_position_product_name=100;
                     window.ec.storefront.product_details_position_breadcrumbs=200;
@@ -179,10 +180,11 @@
                     window.ec.storefront.product_details_position_buy_button=700;
                     window.ec.storefront.product_details_position_wholesale_prices=800;
                     window.ec.storefront.product_details_position_product_description=900;
+                    window.ec.storefront.product_details_position_delivery_time=undefined;
                     window.ec.storefront.product_details_position_share_buttons=1000;
                     window.ec.storefront.product_details_position_subtitle=500;
                     window.ec.storefront.product_details_show_subtitle=false;
-                    xProductBrowser("categoriesPerRow=3","views=grid(20,3) list(60) table(60)","categoryView=grid","searchView=list","defaultProductId=430432869","id=my-store-60464127");
+                    xProductBrowser("categoriesPerRow=3","views=grid(20,3) list(60) table(60)","categoryView=grid","searchView=list","defaultProductId=471721108","id=my-store-60464127");
                     </script>
                     </div>
 
@@ -192,6 +194,7 @@
         </div>
     </section>
     <!-- Product Shop Section End -->
+
 
 
    <!-- Footer Section Begin -->
